--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+    <!-- Aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- My Css -->
     <link rel="stylesheet" href="style.css" />
 
@@ -51,6 +54,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron">
+      <div data-aos="zoom-in">
       <div class="container">
       <div class="row">
         <div class="col-md-6" >
@@ -70,11 +74,13 @@
           <img src="img/foto_profile2.png"/>
         </div> 
       </div>
+    </div>
     </section>
     <!-- Akhir Jumbotron -->
 
     <!-- About me -->
     <section id="tools">
+      <div data-aos="zoom-in">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col mb-3">
@@ -96,12 +102,14 @@
           </div>
         </div>
       </div>
+      </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#edf1f1" fill-opacity="1" d="M0,32L48,37.3C96,43,192,53,288,58.7C384,64,480,64,576,90.7C672,117,768,171,864,208C960,245,1056,267,1152,272C1248,277,1344,267,1392,261.3L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir About Me -->
 
     <!-- Projects -->
     <section id="projects">
+      <div data-aos="zoom-in">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -139,11 +147,13 @@
           </div>
         </div>
       </div>
+    </div>
       </section>
     <!-- Akhir Projects -->
 
     <!-- Contact -->
     <section id="contact">
+      <div data-aos="zoom-in">
       <div class="container">
         <div class="row">
           <div class="col text-center mb-3">
@@ -177,6 +187,7 @@
           </div>
         </div>
       </div>
+      </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#304656" fill-opacity="1" d="M0,64L48,74.7C96,85,192,107,288,122.7C384,139,480,149,576,165.3C672,181,768,203,864,218.7C960,235,1056,245,1152,250.7C1248,256,1344,256,1392,256L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir Contact -->
@@ -191,5 +202,9 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
