--- a/index.html
+++ b/index.html
@@ -127,21 +127,19 @@
               </a>
               <div class="card-body text-center">
                 <h5>Coffee Valley</h5>
-                <!-- <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet libero excepturi beatae eligendi, praesentium exercitationem dignissimos necessitatibus autem quod provident consequatur temporibus expedita id impedit quasi maiores velit quaerat in.</p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/portofolio-1.PNG" class="card-img-top">
-              <a href="">
+              <img src="img/Hefa-Store.PNG" class="card-img-top">
+              <a href="https://rhezavincentius.github.io/Hefa-Store/">
                 <div class="container d-flex justify-content-center">         
                   <i class="bi bi-eye-fill"></i>
                 </div>    
               </a>
               <div class="card-body text-center">
                 <h5>E-Commerce</h5>
-                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sed possimus recusandae. Quisquam unde earum soluta cum, dolore fuga veritatis quidem sit ab ullam ratione aspernatur voluptatum facere! Ducimus, officia?</p> -->
               </div>
             </div>
           </div>
